--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 my.app.title=value from Github
 my.app.title=value from second Github
 my.app.title=value from third Github
-
+my.app.title=value from fourth Github
